--- a/2025-04-15/TT4-15.qmd
+++ b/2025-04-15/TT4-15.qmd
@@ -21,7 +21,7 @@ penguins <- penguins %>%
 ```
 
 # Missigness Exploration
-```{r}
+```{r,echo=FALSE}
 naniar::vis_miss(penguins)
 
 penguinsLongNum <- penguins %>%
@@ -56,42 +56,42 @@ penguinsLongNum %>%
 
 # More Missigness-- From Class Notes
 ```{r}
-library(mice)
-penguinsMice <- penguins %>%
-  mutate(across(where(~ !is.numeric(.)), ~ as.factor(.))) %>%
-  select(sex, species, bill_len, bill_dep, flipper_len, body_mass)
-
-make.method(penguinsMice)
-
-ci_list <- vector("list")
-
-# Multiple imputation -------------
-mice(penguinsMice, m = 10, method = "pmm", printFlag = FALSE) # m = 10 is similar to CV, create 10 different datasets and combine info. across 
-mi_mods <- with(mice_obj, lm(body_mass ~  bill_len + bill_dep + flipper_len + sex))
-pooled_res <- pool(mi_mods)
-summ_pooled_res <- summary(pooled_res, conf.int = TRUE, conf.level = 0.95)
-ci_multiple_lower <- summ_pooled_res %>% filter(term=="sex") %>% pull(`2.5 %`)
-ci_multiple_upper <- summ_pooled_res %>% filter(term=="sex") %>% pull(`97.5 %`)
-
-# Store CI information
-ci_list <- tibble(
-    ci_lower = c(
-        ci_multiple_lower
-    ),
-    ci_upper = c(
-        ci_multiple_upper
-    ),
-    which_imp = c("multiple")
-)
-
-ci_data <- bind_rows(ci_list)
-ci_data %>% 
-    mutate(contains_truth = ci_lower < 1 & ci_upper > 1) %>% 
-    group_by(which_imp) %>% 
-    summarize(frac_contains_truth = mean(contains_truth))
+# library(mice)
+# penguinsMice <- penguins %>%
+#   mutate(across(where(~ !is.numeric(.)), ~ as.factor(.))) %>%
+#   select(sex, species, bill_len, bill_dep, flipper_len, body_mass)
+# 
+# make.method(penguinsMice)
+# 
+# ci_list <- vector("list")
+# 
+# # Multiple imputation -------------
+# mice(penguinsMice, m = 10, method = "pmm", printFlag = FALSE) # m = 10 is similar to CV, create 10 different datasets and combine info. across 
+# mi_mods <- with(mice_obj, lm(body_mass ~  bill_len + bill_dep + flipper_len + sex))
+# pooled_res <- pool(mi_mods)
+# summ_pooled_res <- summary(pooled_res, conf.int = TRUE, conf.level = 0.95)
+# ci_multiple_lower <- summ_pooled_res %>% filter(term=="sex") %>% pull(`2.5 %`)
+# ci_multiple_upper <- summ_pooled_res %>% filter(term=="sex") %>% pull(`97.5 %`)
+# 
+# # Store CI information
+# ci_list <- tibble(
+#     ci_lower = c(
+#         ci_multiple_lower
+#     ),
+#     ci_upper = c(
+#         ci_multiple_upper
+#     ),
+#     which_imp = c("multiple")
+# )
+# 
+# ci_data <- bind_rows(ci_list)
+# ci_data %>% 
+#     mutate(contains_truth = ci_lower < 1 & ci_upper > 1) %>% 
+#     group_by(which_imp) %>% 
+#     summarize(frac_contains_truth = mean(contains_truth))
 ```
 
-```{r}
+```{r, echo=FALSE}
 penguinsFacet <- penguins %>%
   pivot_longer(cols = bill_len:body_mass, names_to = "Measures", values_to = "Value")
 
@@ -101,7 +101,7 @@ penguinsFacet %>%
     facet_wrap(~ Measures, scales = "free_x")
 ```
 
-```{r}
+```{r, echo=FALSE}
 penguins %>%
   ggplot(aes(x = body_mass, y = island, color = species, shape = sex)) +
     geom_jitter(height = 0.1, width=0.01, size=1.5)
@@ -156,7 +156,7 @@ ggsave(plot,
        height = 4, width = 6, units = "in")
 ```
 
-```{r}
+```{r, echo=FALSE}
 penguins %>%
   group_by(island, species,  sex) %>%
   summarize(n = n()) %>%
