Changed to .png's

--- a/2025-04-15/TT4-15.qmd
+++ b/2025-04-15/TT4-15.qmd
@@ -151,8 +151,8 @@ plot <- penguinsFacet %>%
     # theme_bw()
 
 ggsave(plot, 
-       filename = "penguinsPlot.jpg",
-       device = "jpg",
+       filename = "penguinsPlot.png",
+       device = "png",
        height = 4, width = 6, units = "in")
 ```
 
